2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-embeddable.c (impl_Bonobo_Embeddable_advise),
	(impl_Bonobo_Embeddable_unadvise): kill.
	(bonobo_embeddable_class_init): upd.

	* changes.txt: add to document changes

	* bonobo/Makefile.am: remove bonobo-desktop.[ch]

	* bonobo/bonobo-desktop.[ch]: remove.

2001-05-02  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-widget.c (bonobo_widget_launch_component),
	(bonobo_widget_get_objref): kill BonoboObjectClient

	* bonobo/bonobo-client-site.c (bonobo_client_site_bind_embeddable),
	(bonobo_client_site_get_embeddable): kill BonoboObjectClient.

2001-05-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (bonobo_ui_component_set_container),
	(bonobo_ui_component_unset_container, impl_set_prop),
	(bonobo_ui_component_add_verb_list_with_data):  kill theoretical
	re-enterancy issues.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-control.[ch]: Use GObject, not GtkObject.
	* bonobo/bonobo-control-frame.[ch]: Likewise.
	* bonobo/bonobo-ui-component.[ch]: Likewise.
	* bonobo/bonobo-ui-container.[ch]: Likewise.

	* bonobo/bonobo-ui-engine.c (impl_destroy): Removed and put
	all the stuff into finalize; `destroy' may be run multiple
	times with GTK+ 2.0, so it's easier to have this in finalize.

	* bonobo/bonobo-widget.c (bonobo_widget_destroy): Renamed to
	bonobo_widget_finalize(), we use `finalize' since `destroy'
	may be run multiple times.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/Makefile.am: Install all our header files.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* libbonoboui.h: Don't #include bonobo-print.h and
	bonobo-print-client.h for the moment.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-win.c (construct_priv): #ifdef FIXME call
	to gtk_menu_bar_set_shadow_type().

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-selector-widget.c: #include
	<libgnome/gnome-preferences.h> instead of